<resources>
    <string name="app_name">Tradly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="splash1">
      Empowering Artisans, Farmers &amp; Micro Business
    </string>
    <string name="splash2">
     Connecting NGOs, Social Enterprises with Communities
    </string>
    <string name="splash3">
    Donate, Invest &amp; Support infrastructure projects
     </string>
    <string name="product_description">
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lobortis cras placerat diam ipsum ut. Nisi vel adipiscing massa bibendum diam. Suspendisse mattis dui maecenas duis mattis. Mattis aliquam at arcu, semper nunc, venenatis et pellentesque eu. Id tristique maecenas tristique habitasse eu elementum sed. Aliquam eget lacus, arcu, adipiscing eget feugiat in dolor sagittis.
\n Non commodo, a justo massa porttitor sed placerat in. Orci tristique etiam tempus sed. Mi varius morbi egestas dictum tempor nisl. In
     </string>
    <string name="button_home">Home</string>
    <string name="button_profile">Profile</string>
    <string name="button_browse">Browse</string>
    <string name="button_store">Store</string>
    <string name="button_orderHistory">Order History</string>
</resources>